--- a/dashboard.html
+++ b/dashboard.html
@@ -24,8 +24,8 @@
                     </ul>
                 </nav>
                 <div class="user-info">
-                    <div class="user-avatar">JD</div>
-                    <span>Susan Price</span>
+                    <div class="user-avatar">CA</div>
+                    <span>Comas Anajulia</span>
                     <a href="index.html" class="logout-btn">Logout</a>
                 </div>
             </div>
@@ -41,7 +41,7 @@
 
             <div class="balance-card">
                 <div class="balance-label">Available Balance</div>
-                <div class="balance-amount">$400,000.00</div>
+                <div class="balance-amount">$215,564.00</div>
                 <div class="balance-details">
                     <div class="balance-item">
                         <span class="label">Cash Balance</span>
@@ -49,7 +49,7 @@
                     </div>
                     <div class="balance-item">
                         <span class="label">Crypto Value</span>
-                        <span class="value">$115,000.00</span>
+                        <span class="value">$115,707.00</span>
                     </div>
                 </div>
             </div>
