--- a/dashboard.html
+++ b/dashboard.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="page-header">
                 <h1>Dashboard</h1>
-                <p>Welcome back, Susan. Here's your financial overview.</p>
+                <p>Welcome back, Anajulia. Here's your financial overview.</p>
             </div>
 
             <div class="balance-card">
